# CGServer

./: CMakeLists.txt  README.md
config/: cgserver.ini
include/: CBot.h  CBotCG.h  CColour.h  CDiffusion.h  CIRCGateway.h  CLog.h  CMainApp.h  COutils.h  CServiceApp.h  CSingleTon.h  CUser.h  Ciel.h  Cpasspriv.h  Ctrlaw.h  DBColor.h  DBase.h  global.h
src/: CBot.cpp  CBotCG.cpp  CColour.cpp  CDiffusion.cpp  CIRCGateway.cpp  CLog.cpp  CMainApp.cpp  COutils.cpp  CServiceApp.cpp  CUser.cpp  Ciel.cpp  Cpasspriv.cpp  Ctrlaw.cpp  DBColor.cpp  DBase.cpp
systemd/: cgserver.service
